Edge:
* [FIX] Load real-time index definitions when listing fields, attributes, and/or conditions.
* [CHANGE] UTF-8 is now the default charset again (as it was in earlier Thinking Sphinx versions).
* [FEATURE] Initial realtime index support, including the ts:generate task for building index datasets. Sphinx 2.0.6 is required.
* [CHANGE] Removing ts:version rake task.
* [FEATURE] SphinxQL connection pooling via the Innertube gem.

2012-12-22: 3.0.0.rc
* [FEATURE] Source type support (query and ranged query) for both attributes and fields. Custom SQL strings can be supplied as well.
* [FEATURE] Wordcount attributes and fields now supported.
* [FEATURE] Support for Sinatra and other non-Rails frameworks.
* [FEATURE] A sphinx scope can be defined as the default.
* [FEATURE] An index can have multiple sources, by using define_source within the index definition.
* [FEATURE] sanitize_sql is available within an index definition.
* [FEATURE] Providing :prefixes => true or :infixes => true as an option when declaring a field means just the noted fields have infixes/prefixes applied.
* [FEATURE] ThinkingSphinx::Search#query_time returns the time Sphinx took to make the query.
* [FEATURE] Namespaced model support.
* [FEATURE] Default settings for index definition arguments can be set in config/thinking_sphinx.yml.
* [FIX] Correctly escape nulls in inheritance column (Darcy Laycock).
* [FIX] Use ThinkingSphinx::Configuration#render_to_file instead of ThinkingSphinx::Configuration#build in test helpers (Darcy Laycock).
* [FIX] Suppressing delta output in test helpers now works (Darcy Laycock).
* [FEATURE] A custom Riddle/Sphinx controller can be supplied. Useful for Flying Sphinx to have an API layer over Sphinx commands, without needing custom gems for different Thinking Sphinx/Flying Sphinx combinations.

2012-10-06: 3.0.0.pre
* First pre-release. Not quite feature complete, but the important stuff is certainly covered. See the README for more the finer details.